# ss_kvasir_dataset_access

./: .gitignore  build_yolo_splits.py  constants.py  main.py  pyproject.toml  quick_preview_by_filename.py  readme.md  readmeta.py  split_by_dir.py  utils.py  video.py
utils/: bash.sh  create_yaml.py  fix_it.py  valitate_dup_mis.py
